--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 :root {
     --bg-color:#ffffff;
     --primary-color: #9c0987;
-    --secondary-color:#fa025f;
+    --secondary-color:#ffffff;
     --font: "Nunito Sans", sans-serif;
 }
 
