--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 :root {
     --bg-color:#ffffff;
-    --primary-color: #9c0987;
+    --primary-color: #ffffff;
     --secondary-color:#ffffff;
     --font: "Nunito Sans", sans-serif;
 }
