--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 :root {
     --bg-color:#ffffff;
     --primary-color: #ffffff;
-    --secondary-color:#ffffff;
+    --secondary-color:#4f005c;
     --font: "Nunito Sans", sans-serif;
 }
 
