--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 
 :root {
-    --bg-color:#ffffff;
+    --bg-color:#de7bda;
     --primary-color: #ffffff;
     --secondary-color:#4f005c;
     --font: "Nunito Sans", sans-serif;
